--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,10 +38,10 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".DroneMap"
-            android:label="@string/title_activity_drone_map"></activity>
-            <activity android:name="com.example.tim.client.Client"/>
+        <!--<activity-->
+            <!--android:name=".DroneMap"-->
+            <!--android:label="@string/title_activity_drone_map"></activity>-->
+            <!--<activity android:name=".Client"/>-->
     </application>
 
 </manifest>
