--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -40,9 +41,10 @@
 
         <activity
             android:name=".DroneMap"
-            android:label="@string/title_activity_drone_map"></activity>
+            android:label="@string/title_activity_drone_map" />
 
-        <!--<activity android:name=".Client"/>-->
+        <!-- <activity android:name=".Client"/> -->
+        <activity android:name=".JsDisplayActivity"></activity>
     </application>
 
 </manifest>
